Create new calander component and finish UI for the TOP view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<GridLayout>
-  <page-router-outlet></page-router-outlet>
+<GridLayout rows="*" class="mainLayout">
+  <StackLayout row="0">
+    <ns-calender></ns-calender>
+  </StackLayout>
 </GridLayout>
