--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,106 @@
-@import '@nativescript/theme/css/core.css';
-@import '@nativescript/theme/css/default.css';
+@import "@nativescript/theme/css/core.css";
+@import "@nativescript/theme/css/default.css";
 
-Button.-primary {
-  font-size: 18;
+.mainLayout {
+  background-color: #f2f2f2;
+}
+
+/* spacing helpers classes */
+
+.m-1 {
+  margin: 10;
+}
+.m-2 {
+  margin: 20;
+}
+.m-3 {
+  margin: 30;
+}
+
+.mt-1 {
+  margin-top: 10;
+}
+.mt-2 {
+  margin-top: 20;
+}
+.mt-3 {
+  margin-top: 30;
+}
+
+.mb-1 {
+  margin-bottom: 10;
+}
+.mb-2 {
+  margin-bottom: 20;
+}
+.mb-3 {
+  margin-bottom: 30;
+}
+
+.ml-1 {
+  margin-left: 10;
+}
+.ml-2 {
+  margin-left: 20;
+}
+.ml-3 {
+  margin-left: 30;
+}
+
+.mr-1 {
+  margin-right: 10;
+}
+.mr-2 {
+  margin-right: 20;
+}
+
+/* padding helper classes */
+.p-1 {
+  padding: 10;
+}
+.p-2 {
+  padding: 20;
+}
+.p-3 {
+  padding: 30;
+}
+
+.pt-1 {
+  padding-top: 10;
+}
+.pt-2 {
+  padding-top: 20;
+}
+.pt-3 {
+  padding-top: 30;
+}
+
+.pb-1 {
+  padding-bottom: 10;
+}
+.pb-2 {
+  padding-bottom: 20;
+}
+.pb-3 {
+  padding-bottom: 30;
+}
+
+.pl-1 {
+  padding-left: 10;
+}
+.pl-2 {
+  padding-left: 20;
+}
+.pl-3 {
+  padding-left: 30;
+}
+
+.pr-1 {
+  padding-right: 10;
+}
+.pr-2 {
+  padding-right: 20;
+}
+.pr-3 {
+  padding-right: 30;
 }
