Fix typo of naming calendar and split logic for the top section into new component called calendar-filter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <GridLayout rows="*" class="mainLayout">
   <StackLayout row="0">
-    <ns-calender></ns-calender>
+    <ns-calendar></ns-calendar>
   </StackLayout>
 </GridLayout>
