--- a/src/app/calendar/calender-filters/calendar-filter.component.html
+++ b/src/app/calendar/calender-filters/calendar-filter.component.html
@@ -1,6 +1,4 @@
-<StackLayout>
-  <!-- Top View containing filters -->
-  <FlexboxLayout style="padding: 20">
+<FlexboxLayout class="p-2">
     <FlexboxLayout class="dropDownWrapper" width="30%">
       <DropDown
         #dd
@@ -31,5 +29,3 @@
       ></DropDown>
     </FlexboxLayout>
   </FlexboxLayout>
-  <!-- Main View -->
-</StackLayout>
