--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -2,5 +2,13 @@
   <!-- Top View containing filters -->
   <ns-calendar-filter></ns-calendar-filter>
   <!-- Main View -->
-  <GridLayout rows="*,*" columns="*,3*"> </GridLayout>
+  <GridLayout rows="*,*" columns="*,2.5*" class="p-2">
+    <ns-calendar-short-view row="0" column="0"></ns-calendar-short-view>
+    <ns-calendar-next-view row="1" column="0"></ns-calendar-next-view>
+    <ns-calendar-expanded-view
+      row="0"
+      column="1"
+      rowSpan="2"
+    ></ns-calendar-expanded-view>
+  </GridLayout>
 </StackLayout>
