--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,10 @@
   background-color: #f2f2f2;
 }
 
-/* spacing helpers classes */
+/* helpers classes */
+.text-center {
+  text-align: center;
+}
 
 .m-1 {
   margin: 10;
@@ -103,4 +106,17 @@
 }
 .pr-3 {
   padding-right: 30;
+}
+
+.py-1 {
+  padding-top: 10;
+  padding-bottom: 10;
+}
+.py-2 {
+  padding-top: 20;
+  padding-bottom: 20;
+}
+.py-3 {
+  padding-top: 30;
+  padding-bottom: 30;
 }
