--- a/src/app/calendar/calender-filters/calendar-filter.component.scss
+++ b/src/app/calendar/calender-filters/calendar-filter.component.scss
@@ -1,16 +1,14 @@
-.propertiesSelectMenu,
-.agentsSelectMenu {
-  height: 30;
-  background-image: url("~/app/assets/arrowDown.png");
-  background-repeat: no-repeat;
-  background-size: 20 20;
-  background-position: right center;
-}
-
-.dropDownWrapper {
+.drop-down {
   padding: 5 10;
   background-color: white;
   border-radius: 6;
   border-width: 1;
   border-color: #d8d8d8;
+  &-menu {
+    height: 30;
+    background-image: url("~/app/assets/arrowDown.png");
+    background-repeat: no-repeat;
+    background-size: 20 20;
+    background-position: right center;
+  }
 }
