--- a/src/app/calendar/calendar-next-view/calendar-next-view.component.html
+++ b/src/app/calendar/calendar-next-view/calendar-next-view.component.html
@@ -1,3 +1,6 @@
 <FlexboxLayout>
   <Label id="2" text="calander next view"></Label>
 </FlexboxLayout>
+<StackLayout class="p-2 next">
+
+</StackLayout>
