--- a/src/app/calendar/calendar-short-view/calendar-short-view.component.scss
+++ b/src/app/calendar/calendar-short-view/calendar-short-view.component.scss
@@ -1,7 +1,7 @@
 .calendar {
   background-color: white;
   border-color: #e7e7e7;
-  border-width: 2;
+  border-width: 2 2 1 2;
   &-date {
     font-weight: bold;
   }
