Finish next view component UI

--- a/src/app/calendar/calendar-next-view/calendar-next-view.component.html
+++ b/src/app/calendar/calendar-next-view/calendar-next-view.component.html
@@ -2,5 +2,20 @@
   <Label id="2" text="calander next view"></Label>
 </FlexboxLayout>
 <StackLayout class="p-2 next">
+  <label text="NEXT VIEWING" class="next-header pb-2"></label>
+  <FlexboxLayout width="100%" height="40%" class="next-appart-bg">
+  </FlexboxLayout>
+  <label text="Great apartment in east Berlin" class="next-title pt-2"></label>
+  <label text="Road 17, 10785 Berlin, Germany" class="gray-text pb-2"></label>
 
+  <FlexboxLayout>
+    <FlexboxLayout class="calendar-icon mr-1"> </FlexboxLayout>
+    <label text="10 October 2017"></label>
+    <FlexboxLayout class="clock-icon ml-3 mr-1"> </FlexboxLayout>
+    <label text="14:00"></label>
+  </FlexboxLayout>
+  <FlexboxLayout class="mt-1">
+    <FlexboxLayout class="person-icon mr-1"> </FlexboxLayout>
+    <label text="6 | 8"></label>
+  </FlexboxLayout>
 </StackLayout>
