--- a/src/app.css
+++ b/src/app.css
@@ -22,6 +22,10 @@
   background-image: url("~/app/assets/arrowRight.png");
 }
 
+.gray-text {
+  color: #a3a3a3;
+}
+
 /* helpers classes */
 .text-center {
   text-align: center;
