--- a/src/app/calendar/calendar-short-view/calendar-short-view.component.scss
+++ b/src/app/calendar/calendar-short-view/calendar-short-view.component.scss
@@ -9,5 +9,18 @@
     border-color: #e7e7e7;
     border-bottom-width: 2;
   }
+  &-active-week-card {
+    background-color: #e7e7e7;
+  }
+  &-active-day-card {
+    background-color: #e7e7e7;
+  }
 }
 
+.border-radius-right {
+  border-radius: 0 4 4 0;
+}
+
+.border-radius-left {
+  border-radius: 4 0 0 4;
+}
