--- a/src/app.css
+++ b/src/app.css
@@ -8,8 +8,8 @@
 
 .arrow-left,
 .arrow-right {
-  height: 10;
-  width: 10;
+  height: 20;
+  width: 20;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -76,6 +76,19 @@
 }
 .mr-2 {
   margin-right: 20;
+}
+
+.my-1 {
+  margin-top: 10;
+  margin-bottom: 10;
+}
+.my-2 {
+  margin-top: 20;
+  margin-bottom: 20;
+}
+.my-3 {
+  margin-top: 20;
+  margin-bottom: 20;
 }
 
 .p-small {
