--- a/src/app/calendar/calendar-short-view/calendar-short-view.component.scss
+++ b/src/app/calendar/calendar-short-view/calendar-short-view.component.scss
@@ -4,6 +4,7 @@
   border-width: 2 2 1 2;
   &-date {
     font-weight: bold;
+    font-size: 14;
   }
   &-top-wrapper {
     border-color: #e7e7e7;
