--- a/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.scss
+++ b/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.scss
@@ -4,6 +4,12 @@
   border-width: 2 2 2 0;
   &-date {
     font-weight: bold;
+    font-size: 14;
+  }
+  &-day {
+    font-weight: 700;
+    letter-spacing: 0.05;
+    font-size: 11;
   }
   &-top-wrapper {
     border-color: #e7e7e7;
@@ -17,8 +23,19 @@
     border-width: 1;
     border-color: #e7e7e7;
   }
-  &-hour-label{
+  &-hour-label {
     font-weight: bold;
     font-size: 10;
+  }
+
+  &-day-card {
+    padding: 5 10;
+    &-active {
+      background-color: #3486ef;
+      border-radius: 2;
+      .calendar-expanded-day {
+        color: white;
+      }
+    }
   }
 }
