--- a/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.html
+++ b/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.html
@@ -34,6 +34,7 @@
         <Label
           [text]="day.dayString"
           class="text-center calendar-expanded-day"
+          [class.text-grey]="day.isInPast && !day.isActive"
         ></Label>
       </StackLayout>
     </ng-container>
