--- a/src/app/calendar/calendar-next-view/calendar-next-view.component.html
+++ b/src/app/calendar/calendar-next-view/calendar-next-view.component.html
@@ -6,7 +6,7 @@
   <FlexboxLayout width="100%" height="40%" class="next-appart-bg">
   </FlexboxLayout>
   <label text="Great apartment in east Berlin" class="next-title pt-2"></label>
-  <label text="Road 17, 10785 Berlin, Germany" class="gray-text pb-2"></label>
+  <label text="Road 17, 10785 Berlin, Germany" class="text-grey pb-2"></label>
 
   <FlexboxLayout>
     <FlexboxLayout class="calendar-icon mr-1"> </FlexboxLayout>
