--- a/src/app/calendar/calendar-short-view/calendar-short-view.component.scss
+++ b/src/app/calendar/calendar-short-view/calendar-short-view.component.scss
@@ -20,6 +20,14 @@
       color: white;
     }
   }
+  &-appointment-bubble {
+    // background-color: #3486ef;
+    width: 3;
+    height: 3;
+    margin-top: 25;
+    z-index: 3;
+    border-radius: 3;
+  }
 }
 
 .border-radius-right {
