--- a/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.html
+++ b/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.html
@@ -43,7 +43,7 @@
     <ScrollView orientation="vertical">
       <GridLayout [rows]="generateGridRows()" [columns]="generateGridColumns()">
         <ng-container *ngFor="let hour of hours; let i = index">
-          <StackLayout
+          <FlexboxLayout
             [row]="i"
             [col]="0"
             [height]="'90'"
@@ -53,31 +53,29 @@
             class="calendar-expanded-date-time-card p-small"
           >
             <Label [text]="hour" class="calendar-expanded-hour-label"></Label>
-          </StackLayout>
+          </FlexboxLayout>
         </ng-container>
 
         <ng-container *ngFor="let hour of hours; let i = index">
           <ng-container *ngFor="let day of days; let j = index">
-            <StackLayout
+            <FlexboxLayout
               [row]="i"
               [col]="j + 1"
               [height]="'90'"
               [ngStyle]="{
-                'border-width': j === days.length - 1 ? '1 0 1 1' : '1',
-                'border-color': j == 0 ? '#e7e7e7' : '#2B2E33'
+                'border-width': '1',
+                'border-color': day.isInPast ? '#e7e7e7' : '#2B2E33'
               }"
               class="calendar-expanded-date-time-card"
             >
               <ns-viewing-card
+                *ngIf="i == 0"
                 [data]="{
-                  viewingNumber: 3,
-                  imageUrls: [
-                    'https://images.pexels.com/photos/1974596/pexels-photo-1974596.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'
-                  ]
+                  viewingNumber: 3
                 }"
-                [isInPast]="j === 0"
+                [isInPast]="day.isInPast"
               ></ns-viewing-card>
-            </StackLayout>
+            </FlexboxLayout>
           </ng-container>
         </ng-container>
       </GridLayout>
