--- a/src/app/calendar/calendar-expanded-view/viewing-card/viewing-card.component.html
+++ b/src/app/calendar/calendar-expanded-view/viewing-card/viewing-card.component.html
@@ -3,7 +3,8 @@
   justifyContent="space-between"
   alignItems="flex-start"
   class="p-small"
-  [height]="'100%'"
+  height="100%"
+  width="100%"
   [class.isInPast]="isInPast"
   [class.isInFuture]="!isInPast"
 >
@@ -11,12 +12,6 @@
     class="viewing-card-text"
     [text]="data.viewingNumber + ' VIEWINGS'"
   ></Label>
-  <FlexboxLayout class="viewing-card-image-wrapper">
-    <Image
-      width="30"
-      height="30"
-      stretch="aspectFill"
-      [src]="data.imageUrls[0]"
-    />
+  <FlexboxLayout class="viewing-card-image" width="30" height="30">
   </FlexboxLayout>
 </FlexboxLayout>
