add modal logic and pass the appropriate data to it

--- a/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.html
+++ b/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.html
@@ -70,9 +70,7 @@
                   day.appointments.length > 0 &&
                   hourHasAppointment(i, day).length > 0
                 "
-                [data]="{
-                  viewingNumber: 3
-                }"
+                [data]="hourHasAppointment(i, day)"
                 [isInPast]="day.isInPast"
               ></ns-viewing-card>
             </FlexboxLayout>
