--- a/src/app/calendar/calendar-short-view/calendar-short-view.component.html
+++ b/src/app/calendar/calendar-short-view/calendar-short-view.component.html
@@ -1,5 +1,5 @@
 <StackLayout class="calendar">
-  <FlexboxLayout flexDirection="row" class="calendar-top-wrapper">
+  <FlexboxLayout class="calendar-top-wrapper">
     <Label
       flexGrow="1"
       class="calendar-date ml-2"
