--- a/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.html
+++ b/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.html
@@ -1,5 +1,5 @@
 <StackLayout class="calendar-expanded">
-  <FlexboxLayout flexDirection="row" class="calendar-expanded-top-wrapper">
+  <FlexboxLayout class="calendar-expanded-top-wrapper">
     <Label
       flexGrow="1"
       class="calendar-expanded-date ml-2"
