--- a/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.scss
+++ b/src/app/calendar/calendar-expanded-view/calendar-expanded-view.component.scss
@@ -31,7 +31,7 @@
   &-day-card {
     padding: 5 10;
     &-active {
-      background-color: #3486ef;
+      background-color: #3a89ec;
       border-radius: 2;
       .calendar-expanded-day {
         color: white;
