--- a/src/app/calendar/calendar-short-view/calendar-short-view.component.html
+++ b/src/app/calendar/calendar-short-view/calendar-short-view.component.html
@@ -57,7 +57,7 @@
             </StackLayout>
             <AbsoluteLayout
               *ngIf="date.hasAppointment"
-              [backgroundColor]="date.isActiveDay ? '#232323' : '#3486ef'"
+              [backgroundColor]="date.isActiveDay ? '#232323' : '#3a89ec'"
               [class.calendar-appointment-bubble]="true"
             >
             </AbsoluteLayout>
