--- a/src/app/calendar/calendar-short-view/calendar-short-view.component.scss
+++ b/src/app/calendar/calendar-short-view/calendar-short-view.component.scss
@@ -14,14 +14,14 @@
     background-color: #e7e7e7;
   }
   &-active-day-card {
-    background-color: #3486ef;
+    background-color: #3a89ec;
     border-radius: 4;
     .calendar-day-text {
       color: white;
     }
   }
   &-appointment-bubble {
-    // background-color: #3486ef;
+    // background-color: #3a89ec;
     width: 3;
     height: 3;
     margin-top: 25;
