finish logic for the complete project

--- a/src/app/calendar/appointment-modal/appointment-modal.component.html
+++ b/src/app/calendar/appointment-modal/appointment-modal.component.html
@@ -11,11 +11,11 @@
     </FlexboxLayout>
 
     <FlexboxLayout>
-      <GridLayout (tap)="onPrevWeek()" height="60" width="40">
+      <GridLayout (tap)="onPrevAppointment()" height="60" width="40">
         <StackLayout class="arrow-left"> </StackLayout>
       </GridLayout>
 
-      <GridLayout (tap)="onNextWeek()" height="60" width="45">
+      <GridLayout (tap)="onNextAppointment()" height="60" width="45">
         <StackLayout class="arrow-right"> </StackLayout>
       </GridLayout>
     </FlexboxLayout>
